[gd_scene load_steps=30 format=3 uid="uid://kyuxx8bvemmx"]

[ext_resource type="Texture2D" uid="uid://bd74li7h8vjjk" path="res://Imagenes/Personaje/luchador-1.png-removebg-preview.png" id="1_ck3sb"]
[ext_resource type="Script" uid="uid://c3sy6cpa0ke6v" path="res://personaje.gd" id="1_cx4ix"]
[ext_resource type="Texture2D" uid="uid://644qm4axcesb" path="res://Imagenes/Personaje/caminata der.png" id="2_cx4ix"]
[ext_resource type="Script" uid="uid://coe7xbc2x481u" path="res://hitbox.gd" id="5_cx4ix"]
[ext_resource type="Texture2D" uid="uid://2x8ikxpgr4yx" path="res://Imagenes/Personaje/golpe_sin_piernas-removebg-preview.png" id="5_f8plh"]
[ext_resource type="Texture2D" uid="uid://cdx8aj8fy215m" path="res://Imagenes/Personaje/se_cubre-removebg-preview.png" id="6_35kqm"]
[ext_resource type="Texture2D" uid="uid://byjhabdatwfef" path="res://Imagenes/Personaje/golpe_recibido-removebg-preview.png" id="7_35kqm"]
[ext_resource type="Script" path="res://hurtboxPersonaje.gd" id="8_1y5k2"]
[ext_resource type="Texture2D" uid="uid://dm5e7boj353tg" path="res://Imagenes/spritesheet.webp" id="9_pqm5q"]
[ext_resource type="Texture2D" uid="uid://b4dhaatuk60al" path="res://Imagenes/PlayerWalk.png" id="10_2vb47"]
[ext_resource type="AudioStream" uid="uid://mnmuqkxcbs8j" path="res://assets/audio/Punch 2_1.wav" id="11_2vb47"]
[ext_resource type="AudioStream" uid="uid://dfr0tet2wsg8c" path="res://assets/audio/Body Fall 3.wav" id="12_xeorn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_35kqm"]
size = Vector2(152.5, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8vmr"]
atlas = ExtResource("9_pqm5q")
region = Rect2(192, 268, 43, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_vopn2"]
atlas = ExtResource("9_pqm5q")
region = Rect2(241, 268, 43, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_xeorn"]
atlas = ExtResource("9_pqm5q")
region = Rect2(151, 269, 34, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_chw5a"]
atlas = ExtResource("9_pqm5q")
region = Rect2(151, 267, 34, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdwyh"]
atlas = ExtResource("9_pqm5q")
region = Rect2(3, 269, 43, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_h755h"]
atlas = ExtResource("9_pqm5q")
region = Rect2(3, 267, 43, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyv6t"]
atlas = ExtResource("9_pqm5q")
region = Rect2(46, 269, 43, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqm5q"]
atlas = ExtResource("9_pqm5q")
region = Rect2(97, 269, 41, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vb47"]
atlas = ExtResource("10_2vb47")
region = Rect2(33, 30, 39, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyluk"]
atlas = ExtResource("10_2vb47")
region = Rect2(33, 28, 39, 65)

[sub_resource type="SpriteFrames" id="SpriteFrames_f8plh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8vmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vopn2")
}],
"loop": true,
"name": &"PlayerDefeated",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xeorn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chw5a")
}],
"loop": true,
"name": &"PlayerGuard",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdwyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h755h")
}],
"loop": true,
"name": &"PlayerIdle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyv6t")
}],
"loop": true,
"name": &"PlayerPunch",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqm5q")
}],
"loop": true,
"name": &"PlayerPunched",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vb47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyluk")
}],
"loop": true,
"name": &"PlayerWalk",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pqm5q"]
size = Vector2(27.8472, 39.4792)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1y5k2"]
size = Vector2(86.5, 64)

[sub_resource type="Animation" id="Animation_1y5k2"]
resource_name = "GolpeRecibido"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GolpeRecibido:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PosicionPrincipal:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_f8plh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GolpeRecibido:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PosicionPrincipal:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pqm5q"]
_data = {
&"GolpeRecibido": SubResource("Animation_1y5k2"),
&"RESET": SubResource("Animation_f8plh")
}

[node name="Personaje" type="CharacterBody2D"]
position = Vector2(0, -2)
script = ExtResource("1_cx4ix")

[node name="Delimitador3" type="CollisionShape2D" parent="."]
position = Vector2(-4.25, 42)
shape = SubResource("RectangleShape2D_35kqm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-4, -47)
scale = Vector2(3.85976, 2.9)
sprite_frames = SubResource("SpriteFrames_f8plh")
animation = &"PlayerGuard"

[node name="PosicionPrincipal" type="Sprite2D" parent="."]
scale = Vector2(4.0375, 3.03152)
texture = ExtResource("1_ck3sb")

[node name="Paso" type="Sprite2D" parent="."]
visible = false
position = Vector2(-4.46875, -85.6875)
scale = Vector2(3.30937, 2.86625)
texture = ExtResource("2_cx4ix")

[node name="Golpe" type="Sprite2D" parent="."]
visible = false
position = Vector2(-23, -73)
scale = Vector2(3.59103, 3.34353)
texture = ExtResource("5_f8plh")

[node name="Hitbox" type="Area2D" parent="Golpe" groups=["hurtbox"]]
collision_layer = 4
collision_mask = 4
script = ExtResource("5_cx4ix")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Golpe/Hitbox"]
position = Vector2(13.3666, -32.0021)
shape = SubResource("RectangleShape2D_pqm5q")

[node name="Cubrirse" type="Sprite2D" parent="."]
visible = false
position = Vector2(-11.1875, -41.75)
scale = Vector2(4.54167, 3.51754)
texture = ExtResource("6_35kqm")

[node name="GolpeRecibido" type="Sprite2D" parent="."]
visible = false
position = Vector2(-8, -44)
scale = Vector2(3.61, 2.99603)
texture = ExtResource("7_35kqm")

[node name="Hurtbox" type="Area2D" parent="." groups=["hurtbox"]]
visible = false
collision_layer = 4
collision_mask = 12
script = ExtResource("8_1y5k2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
visible = false
position = Vector2(-13, -66)
shape = SubResource("RectangleShape2D_1y5k2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pqm5q")
}

[node name="AudioGolpe" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_2vb47")

[node name="AudioBloqueo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_xeorn")

[connection signal="area_entered" from="Golpe/Hitbox" to="Golpe/Hitbox" method="_on_area_entered"]
